--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for App-numspeed
 
-0.001   2016-09-30 (PERLANCAR) (unreleased)
+0.001   2016-10-01 (PERLANCAR)
 
         - First release.
